--- a/index.html
+++ b/index.html
@@ -159,31 +159,31 @@ MathJax.Hub.Config({
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-building">
           <video poster="" id="building" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/VastGaussian_Building.mp4"
+            <source src="./video/2dgs_SMBU_mesh0001-0400.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-rubble">
           <video poster="" id="rubble" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/VastGaussian_Rubble.mp4"
+            <source src="./video/2dgs_SMBU_NORMAL0001-0400.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-campus">
           <video poster="" id="campus" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/VastGaussian_Campus.mp4"
+            <source src="./video/ours_SMBU_MESH.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-sciart">
           <video poster="" id="sciart" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/VastGaussian_Sci-Art.mp4"
+            <source src="./video/ours_SMBU_NORMAL0001-0400.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-residence">
           <video poster="" id="residence" autoplay controls muted loop playsinline>
-            <source src="./static/videos/VastGaussian_Residence.mp4"
+            <source src="./video/VastGaussian_Residence.mp4"
                     type="video/mp4">
           </video>
         </div>
