--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ MathJax.Hub.Config({
 <body>
 
 <section class="hero">
-  <div class="hero-body", style="padding-bottom: 0rem;">
+  <div class="hero-body" style="padding-bottom: 0rem;">
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
