--- a/index.html
+++ b/index.html
@@ -180,13 +180,13 @@ MathJax.Hub.Config({
             <source src="./video/ours_SMBU_NORMAL0001-0400.mp4"
                     type="video/mp4">
           </video>
-        </div>
+<!--         </div>
         <div class="item item-residence">
           <video poster="" id="residence" autoplay controls muted loop playsinline>
             <source src="./video/VastGaussian_Residence.mp4"
                     type="video/mp4">
           </video>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
@@ -209,7 +209,7 @@ MathJax.Hub.Config({
   </section>
 
 
-<section class="section">
+<!-- <section class="section">
   <div class="columns is-centered has-text-centered">
     <div class="column is-three-fifths">
       <h2 class="title is-3">Comparison With SOTA</h2>
@@ -249,7 +249,7 @@ MathJax.Hub.Config({
       </p>
     </div>
   </div>
-</section>
+</section> -->
 
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
