--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
         rel="stylesheet">
 
-  <link rel="stylesheet" href="./static/css/bulma.min.css">
-  <link rel="stylesheet" href="./static/css/bulma-carousel.min.css">
-  <link rel="stylesheet" href="./static/css/bulma-slider.min.css">
-  <link rel="stylesheet" href="./static/css/fontawesome.all.min.css">
+  <link rel="stylesheet" href="https://github.com/ulsrgs/ulsrgs.github.io//static/css/bulma.min.css">
+  <link rel="stylesheet" href="https://github.com/ulsrgs/ulsrgs.github.io//static/css/bulma-carousel.min.css">
+  <link rel="stylesheet" href="https://github.com/ulsrgs/ulsrgs.github.io//static/css/bulma-slider.min.css">
+  <link rel="stylesheet" href="https://github.com/ulsrgs/ulsrgs.github.io//static/css/fontawesome.all.min.css">
   <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="./static/css/index.css">
-  <link rel="icon" href="./static/images/icon.png">
+  <link rel="stylesheet" href="https://github.com/ulsrgs/ulsrgs.github.io//static/css/index.css">
+  <link rel="icon" href="https://github.com/ulsrgs/ulsrgs.github.io//static/images/icon.png">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script defer src="./static/js/fontawesome.all.min.js"></script>
-  <script src="./static/js/bulma-carousel.min.js"></script>
-  <script src="./static/js/bulma-slider.min.js"></script>
-  <script src="./static/js/index.js"></script>
-  <script src="./static/js/video_comparison.js"></script>
+  <script defer src="https://github.com/ulsrgs/ulsrgs.github.io//static/js/fontawesome.all.min.js"></script>
+  <script src="https://github.com/ulsrgs/ulsrgs.github.io//static/js/bulma-carousel.min.js"></script>
+  <script src="https://github.com/ulsrgs/ulsrgs.github.io//static/js/bulma-slider.min.js"></script>
+  <script src="https://github.com/ulsrgs/ulsrgs.github.io//static/js/index.js"></script>
+  <script src="https://github.com/ulsrgs/ulsrgs.github.io//static/js/video_comparison.js"></script>
 
   <script type="text/javascript" async
   src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
@@ -159,25 +159,25 @@ MathJax.Hub.Config({
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-building">
           <video poster="" id="building" autoplay controls muted loop playsinline height="100%">
-            <source src="./video/2dgs_SMBU_mesh0001-0400.mp4"
+            <source src="https://github.com/ulsrgs/ulsrgs.github.io//video/2dgs_SMBU_mesh0001-0400.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-rubble">
           <video poster="" id="rubble" autoplay controls muted loop playsinline height="100%">
-            <source src="./video/2dgs_SMBU_NORMAL0001-0400.mp4"
+            <source src="https://github.com/ulsrgs/ulsrgs.github.io//video/2dgs_SMBU_NORMAL0001-0400.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-campus">
           <video poster="" id="campus" autoplay controls muted loop playsinline height="100%">
-            <source src="./video/ours_SMBU_MESH.mp4"
+            <source src="https://github.com/ulsrgs/ulsrgs.github.io//video/ours_SMBU_MESH.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-sciart">
           <video poster="" id="sciart" autoplay controls muted loop playsinline height="100%">
-            <source src="./video/ours_SMBU_NORMAL0001-0400.mp4"
+            <source src="https://github.com/ulsrgs/ulsrgs.github.io//video/ours_SMBU_NORMAL0001-0400.mp4"
                     type="video/mp4">
           </video>
 <!--         </div>
