--- a/index.html
+++ b/index.html
@@ -6,28 +6,27 @@
         content="VastGaussian: Vast 3D Gaussians for Large Scene Reconstruction">
   <meta name="keywords" content="VastGaussian">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ULSR-GS: Ultra Large-scale Surface Reconstruction Gaussian Splatting with Multi-View Geometric Consistency</title>
+  <title>VastGaussian: Vast 3D Gaussians for Large Scene Reconstruction</title>
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
         rel="stylesheet">
 
- <link rel="stylesheet" href="https://ulsrgs.github.io/static/css/bulma.min.css">
-<link rel="stylesheet" href="https://ulsrgs.github.io/static/css/bulma-carousel.min.css">
-<link rel="stylesheet" href="https://ulsrgs.github.io/static/css/bulma-slider.min.css">
-<link rel="stylesheet" href="https://ulsrgs.github.io/static/css/fontawesome.all.min.css">
-
+  <link rel="stylesheet" href="./static/css/bulma.min.css">
+  <link rel="stylesheet" href="./static/css/bulma-carousel.min.css">
+  <link rel="stylesheet" href="./static/css/bulma-slider.min.css">
+  <link rel="stylesheet" href="./static/css/fontawesome.all.min.css">
   <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://github.com/ulsrgs/ulsrgs.github.io//static/css/index.css">
-  <link rel="icon" href="https://github.com/ulsrgs/ulsrgs.github.io//static/images/icon.png">
+  <link rel="stylesheet" href="./static/css/index.css">
+  <link rel="icon" href="./static/images/icon.png">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script defer src="https://ulsrgs.github.io/static/js/fontawesome.all.min.js"></script>
-  <script src="https://ulsrgs.github.io/static/js/bulma-carousel.min.js"></script>
-  <script src="https://ulsrgs.github.io/static/js/bulma-slider.min.js"></script>
-  <script src="https://ulsrgs.github.io/static/js/index.js"></script>
-  <script src="https://ulsrgs.github.io/static/js/video_comparison.js"></script>
+  <script defer src="./static/js/fontawesome.all.min.js"></script>
+  <script src="./static/js/bulma-carousel.min.js"></script>
+  <script src="./static/js/bulma-slider.min.js"></script>
+  <script src="./static/js/index.js"></script>
+  <script src="./static/js/video_comparison.js"></script>
 
   <script type="text/javascript" async
   src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
@@ -43,13 +42,13 @@ MathJax.Hub.Config({
 <body>
 
 <section class="hero">
-  <div class="hero-body" style="padding-bottom: 0rem;">
+  <div class="hero-body", style="padding-bottom: 0rem;">
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">ULSR-GS: Ultra Large-scale Surface Reconstruction Gaussian Splatting with Multi-View Geometric Consistency</h1>
+          <h1 class="title is-1 publication-title">VastGaussian: Vast 3D Gaussians for Large Scene Reconstruction</h1>
           <div class="is-size-5 publication-authors">
-<!--             <span class="author-block">
+            <span class="author-block">
               Jiaqi Lin<sup>1*</sup>&nbsp;&nbsp;</span>
             <span class="author-block">
               Zhihao Li<sup>2*</sup>&nbsp;&nbsp;</span>
@@ -78,26 +77,26 @@ MathJax.Hub.Config({
               Youliang Yan<sup>2</sup>&nbsp;&nbsp;</span>
             </span>
             <span class="author-block">
-              Wenming Yang<sup>1†</sup> -->
+              Wenming Yang<sup>1†</sup>
             </span>
           </div>
 
           <div class="is-size-5 publication-authors">
-<!--             <span class="author-block", style="color:#726f6f"><sup>1</sup>Tsinghua University&nbsp;&nbsp;&nbsp;&nbsp;</span>
+            <span class="author-block", style="color:#726f6f"><sup>1</sup>Tsinghua University&nbsp;&nbsp;&nbsp;&nbsp;</span>
             <span class="author-block", style="color:#726f6f"><sup>2</sup>Huawei Noah's Ark Lab&nbsp;&nbsp;&nbsp;&nbsp;</span>
-            <span class="author-block", style="color:#726f6f"><sup>3</sup>Shenzhen Institute of Advanced Technology</span> -->
+            <span class="author-block", style="color:#726f6f"><sup>3</sup>Shenzhen Institute of Advanced Technology</span>
           </div>
           <div class="is-size-5 publication-authors">
-<!--             <span class="author-block", style="font-size: 15px;color:#726f6f">linjq22@mails.tsinghua.edu.cn&nbsp;&nbsp;</span>
+            <span class="author-block", style="font-size: 15px;color:#726f6f">linjq22@mails.tsinghua.edu.cn&nbsp;&nbsp;</span>
             <span class="author-block", style="font-size: 15px;color:#726f6f">zhihao.li@huawei.com&nbsp;&nbsp;</span>
-            <span class="author-block", style="font-size: 15px;color:#726f6f">yang.wenming@sz.tsinghua.edu.cn</span> -->
+            <span class="author-block", style="font-size: 15px;color:#726f6f">yang.wenming@sz.tsinghua.edu.cn</span>
           </div>
           <div class="is-size-5 publication-authors">
-<!--             <span class="author-block", style="font-size: 15px;color:#726f6f"><sup>*&nbsp;</sup>Equal contribution&nbsp;&nbsp;&nbsp;&nbsp;</span>
-            <span class="author-block", style="font-size: 15px;color:#726f6f"><sup>†&nbsp;</sup>Corresponding author </span> -->
+            <span class="author-block", style="font-size: 15px;color:#726f6f"><sup>*&nbsp;</sup>Equal contribution&nbsp;&nbsp;&nbsp;&nbsp;</span>
+            <span class="author-block", style="font-size: 15px;color:#726f6f"><sup>†&nbsp;</sup>Corresponding author </span>
           </div>
           <div class="is-size-5 publication-authors">
-<!--             <span class="author-block", style="color:#367DBD";>CVPR 2024</span> -->
+            <span class="author-block", style="color:#367DBD";>CVPR 2024</span>
           </div>
 
           <div class="column has-text-centered">
@@ -112,13 +111,13 @@ MathJax.Hub.Config({
                 </a>
               </span> -->
               <span class="link-block">
-<!--                 <a href="https://arxiv.org/abs/2402.17427"
+                <a href="https://arxiv.org/abs/2402.17427"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
                   </span>
                   <span>arXiv</span>
-                </a> -->
+                </a>
               </span>
               <!-- <span class="link-block">
                 <a href="#"
@@ -130,7 +129,7 @@ MathJax.Hub.Config({
                   </a>
               </span> -->
               <span class="link-block">
-<!--                 <a href="https://cloud.tsinghua.edu.cn/d/1abb3fbd571247919d90/"
+                <a href="https://cloud.tsinghua.edu.cn/d/1abb3fbd571247919d90/"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-paperclip"></i>
@@ -142,9 +141,9 @@ MathJax.Hub.Config({
                 <a href="https://cloud.tsinghua.edu.cn/d/210a5b0a6f284965aaaa/"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
-                      <i class="far fa-images"></i> -->
+                      <i class="far fa-images"></i>
                   </span>
-                  <span>Codes</span>
+                  <span>Datasets</span>
                   </a>
             </div>
           </div>
@@ -160,34 +159,34 @@ MathJax.Hub.Config({
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-building">
           <video poster="" id="building" autoplay controls muted loop playsinline height="100%">
-            <source src="https://ulsrgs.github.io/video/2dgs_SMBU_mesh0001-0400.mp4"
+            <source src="./static/videos/VastGaussian_Building.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-rubble">
           <video poster="" id="rubble" autoplay controls muted loop playsinline height="100%">
-            <source src="https://ulsrgs.github.io/video/2dgs_SMBU_NORMAL0001-0400.mp4"
+            <source src="./static/videos/VastGaussian_Rubble.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-campus">
           <video poster="" id="campus" autoplay controls muted loop playsinline height="100%">
-            <source src="https://ulsrgs.github.io/video/ours_SMBU_MESH.mp4"
+            <source src="./static/videos/VastGaussian_Campus.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-sciart">
           <video poster="" id="sciart" autoplay controls muted loop playsinline height="100%">
-            <source src="https://ulsrgs.github.io/video/ours_SMBU_NORMAL0001-0400.mp4"
+            <source src="./static/videos/VastGaussian_Sci-Art.mp4"
                     type="video/mp4">
           </video>
-<!--         </div>
+        </div>
         <div class="item item-residence">
           <video poster="" id="residence" autoplay controls muted loop playsinline>
-            <source src="./video/VastGaussian_Residence.mp4"
+            <source src="./static/videos/VastGaussian_Residence.mp4"
                     type="video/mp4">
           </video>
-        </div> -->
+        </div>
       </div>
     </div>
   </div>
@@ -204,13 +203,13 @@ MathJax.Hub.Config({
     </div>
     <div class="content has-text-justified">
       <p>
-        We present ULSR-GS, a framework dedicated to high-fidelity surface extraction in ultra-large-scale scenes, addressing the limitations of existing Gaussian Splatting (GS) methods. While GS and related works demonstrate efficient and high-quality scene rendering and surface extraction, they fall short in handling large-scale surface extraction. To overcome this, we propose a point-to-photo partitioning approach combined with a multi-view optimal view matching principle to select the best training images for each sub-region. Additionally, during training, ULSR-GS employs a densification strategy based on multi-view geometric consistency to enhance rendering and surface extraction details. Experimental results demonstrate that ULSR-GS significantly improves both rendering quality and surface extraction accuracy in large-scale scenes.
+        Existing NeRF-based methods for large scene reconstruction often have limitations in visual quality and rendering speed. While the recent 3D Gaussian Splatting works well on small-scale and object-centric scenes, scaling it up to large scenes poses challenges due to limited video memory, long optimization time, and noticeable appearance variations. To address these challenges, we present VastGaussian, the first method for high-quality reconstruction and real-time rendering on large scenes based on 3D Gaussian Splatting. We propose a progressive partitioning strategy to divide a large scene into multiple cells, where the training cameras and point cloud are properly distributed with an airspace-aware visibility criterion. These cells are merged into a complete scene after parallel optimization. We also introduce decoupled appearance modeling into the optimization process to reduce appearance variations in the rendered images. Our approach outperforms existing NeRF-based methods and achieves state-of-the-art results on multiple large scene datasets, enabling fast optimization and high-fidelity real-time rendering.
       </p>
     </div>
   </section>
 
 
-<!-- <section class="section">
+<section class="section">
   <div class="columns is-centered has-text-centered">
     <div class="column is-three-fifths">
       <h2 class="title is-3">Comparison With SOTA</h2>
@@ -250,7 +249,7 @@ MathJax.Hub.Config({
       </p>
     </div>
   </div>
-</section> -->
+</section>
 
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
