--- a/index.html
+++ b/index.html
@@ -160,19 +160,19 @@ MathJax.Hub.Config({
         <div class="item item-building">
           <video poster="" id="building" autoplay controls muted loop  height="100%">
             <source src="video/camp.mp4"
-                    type="video/mp4">
+                    type="https://ulsrgs.github.io/video/mp4">
           </video>
         </div>
         <div class="item item-rubble">
           <video poster="" id="rubble" autoplay controls muted loop  height="100%">
             <source src="video/hospital.mp4"
-                    type="video/mp4">
+                    type="https://ulsrgs.github.io/video/mp4">
           </video>
         </div>
         <div class="item item-campus">
           <video poster="" id="campus" autoplay controls muted loop  height="100%">
             <source src="video/lowwer.mp4"
-                    type="video/mp4">
+                    type="https://ulsrgs.github.io/video/mp4">
           </video>
         </div>
         <!-- <div class="item item-sciart">
@@ -225,21 +225,21 @@ MathJax.Hub.Config({
       <div class="columns is-centered">
         <div class="column is-one-third">
           <div class="video-compare-container" id="materialsDiv1">
-            <video class="video" id="materials1" loop playsinline autoPlay muted src="video/ours_pgsr_smbu_mesh_com.mp4" onplay="resizeAndPlay(this)"></video>
+            <video class="video" id="materials1" loop playsinline autoPlay muted src="https://ulsrgs.github.io/video/ours_pgsr_smbu_mesh_com.mp4" onplay="resizeAndPlay(this)"></video>
             <canvas height=0 class="videoMerge" id="materials1Merge" style="border-radius: 10px;"></canvas>
           </div>
         </div>
 
         <div class="column is-one-third">
           <div class="video-compare-container" id="materialsDiv2">
-            <video class="video" id="materials2" loop playsinline autoPlay muted src="video/ours_gof_sxiit_mormal.mp4" onplay="resizeAndPlay(this)"></video>
+            <video class="video" id="materials2" loop playsinline autoPlay muted src="https://ulsrgs.github.io/video/ours_gof_sxiit_mormal.mp4" onplay="resizeAndPlay(this)"></video>
             <canvas height=0 class="videoMerge" id="materials2Merge" style="border-radius: 10px;"></canvas>
           </div>
         </div>
 
         <div class="column is-one-third">
           <div class="video-compare-container" id="materialsDiv3">
-            <video class="video" id="materials3" loop playsinline autoPlay muted src="video/ours_2dgs_smbu_mesh.mp4" onplay="resizeAndPlay(this)"></video>
+            <video class="video" id="materials3" loop playsinline autoPlay muted src="https://ulsrgs.github.io/video/ours_2dgs_smbu_mesh.mp4" onplay="resizeAndPlay(this)"></video>
             <canvas height=0 class="videoMerge" id="materials3Merge" style="border-radius: 10px;"></canvas>
           </div>
         </div>
