--- a/index.html
+++ b/index.html
@@ -159,19 +159,19 @@ MathJax.Hub.Config({
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-building">
           <video poster="" id="building" autoplay controls muted loop  height="100%">
-            <source src="https://ulsrgs.github.io/video/camp.mp4"
+            <source src="https://raw.githubusercontent.com/ulsrgs/ulsrgs.github.io/main/video/camp.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-rubble">
           <video poster="" id="rubble" autoplay controls muted loop  height="100%">
-            <source src="https://ulsrgs.github.io/video/hospital.mp4"
+            <source src="https://raw.githubusercontent.com/ulsrgs/ulsrgs.github.io/main/video/hospital.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-campus">
           <video poster="" id="campus" autoplay controls muted loop  height="100%">
-            <source src="https://ulsrgs.github.io/video/lowwer.mp4"
+            <source src="https://raw.githubusercontent.com/ulsrgs/ulsrgs.github.io/main/video/lowwer.mp4"
                     type="video/mp4">
           </video>
         </div>
