--- a/index.html
+++ b/index.html
@@ -161,7 +161,12 @@ MathJax.Hub.Config({
   </div>
 </section>
 
-<section class="section">
+<div style="text-align: center;">
+  <iframe width="1260" height="720" src="https://www.youtube.com/embed/9Jkqm_BQus4" frameborder="0" allowfullscreen></iframe>
+</div>
+
+
+<!-- <section class="section">
   <div class="columns is-centered has-text-centered">
     <div class="column is-three-fifths">
       <div id="results-carousel" class="carousel results-carousel">
@@ -195,11 +200,11 @@ MathJax.Hub.Config({
                     type="video/mp4">
           </video>
         </div> -->
-      </div>
+      <!-- </div>
     </div>
   </div>
 </div>
-</section>
+</section> --> -->
 
 
 <section class="section">
