--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ MathJax.Hub.Config({
 
           <!-- <div class="column has-text-centered">
             <div class="publication-links">
-              <!-- <span class="link-block">
+               <span class="link-block">
                 <a href="https://arxiv.org/abs/2402.17427"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -162,8 +162,9 @@ MathJax.Hub.Config({
 </section>
 
 <div style="text-align: center;">
-  <iframe width="1260" height="720" src="https://www.youtube.com/embed/9Jkqm_BQus4" frameborder="0" allowfullscreen></iframe>
+  <iframe width="1260" height="720" src="https://www.youtube.com/embed/TEEtA6rnCTE" frameborder="0" allowfullscreen></iframe>
 </div>
+
 
 
 <!-- <section class="section">
@@ -188,7 +189,7 @@ MathJax.Hub.Config({
                     type="video/mp4">
           </video>
         </div>
-        <!-- <div class="item item-sciart">
+         <div class="item item-sciart">
           <video poster="" id="sciart" autoplay controls muted loop  height="100%">
             <source src="video/camp.mp4"
                     type="video/mp4">
@@ -204,7 +205,7 @@ MathJax.Hub.Config({
     </div>
   </div>
 </div>
-</section> --> -->
+</section> --> 
 
 
 <section class="section">
@@ -226,10 +227,33 @@ MathJax.Hub.Config({
   <div class="columns is-centered has-text-centered">
     <div class="column is-three-fifths">
       <h2 class="title is-3">Comparison With SOTA</h2>
-      <img alt="Architecture" src="./static/images/table.PNG" width="100%"/>
+     
     </div>
   </div>
 </div>
+
+<section class="image-gallery">
+  <div class="image-container">
+    <img src="images/SMBU.png" alt="Image 1">
+    <img src="images/LFLS.png" alt="Image 2">
+    <img src="images/SZIIT.png" alt="Image 3">
+  </div>
+</section>
+
+<style>
+  .image-gallery {
+    display: flex;
+    justify-content: center; /* 可选：居中对齐 */
+    gap: 10px; /* 图片之间的间隔 */
+  }
+  
+  .image-container img {
+    max-width: 100%; /* 确保图片自适应容器 */
+    height: auto; /* 保持宽高比 */
+    width: 700px; /* 或者使用具体宽度 */
+  }
+</style>
+
 </section>
 
 <section class="hero is-light is-small">
@@ -252,7 +276,7 @@ MathJax.Hub.Config({
 
         <div class="column is-one-third">
           <div class="video-compare-container" id="materialsDiv3">
-            <video class="video" id="materials3" loop playsinline autoPlay muted src="/video/3.mp4" onplay="resizeAndPlay(this)"></video>
+            <video class="video" id="materials3" loop playsinline autoPlay muted src="/video/1.mp4" onplay="resizeAndPlay(this)"></video>
             <canvas height=0 class="videoMerge" id="materials3Merge" style="border-radius: 10px;"></canvas>
           </div>
         </div>
@@ -517,7 +541,7 @@ new BeforeAfter({id: '#img_comp_33'});
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@inproceedings{lin2024vastgaussian,
+    <pre><code>@inproceedings{ULSRGS,
   title     = {ULSR-GS},
   author    = {},
   booktitle = {},
