--- a/index.html
+++ b/index.html
@@ -243,14 +243,14 @@ MathJax.Hub.Config({
 <style>
   .image-gallery {
     display: flex;
-    justify-content: center; /* 可选：居中对齐 */
-    gap: 10px; /* 图片之间的间隔 */
+    justify-content: center; 
+    gap: 10px; 
   }
   
   .image-container img {
-    max-width: 100%; /* 确保图片自适应容器 */
-    height: auto; /* 保持宽高比 */
-    width: 700px; /* 或者使用具体宽度 */
+    max-width: 100%; 
+    height: auto; 
+    width: 700px; 
   }
 </style>
 
@@ -269,14 +269,14 @@ MathJax.Hub.Config({
 
         <div class="column is-one-third">
           <div class="video-compare-container" id="materialsDiv2">
-            <video class="video" id="materials2" loop playsinline autoPlay muted src="./video/1.mp4" onplay="resizeAndPlay(this)"></video>
+            <video class="video" id="materials2" loop playsinline autoPlay muted src="./video/4.mp4" onplay="resizeAndPlay(this)"></video>
             <canvas height=0 class="videoMerge" id="materials2Merge" style="border-radius: 10px;"></canvas>
           </div>
         </div>
 
         <div class="column is-one-third">
           <div class="video-compare-container" id="materialsDiv3">
-            <video class="video" id="materials3" loop playsinline autoPlay muted src="/video/1.mp4" onplay="resizeAndPlay(this)"></video>
+            <video class="video" id="materials3" loop playsinline autoPlay muted src="3.mp4" onplay="resizeAndPlay(this)"></video>
             <canvas height=0 class="videoMerge" id="materials3Merge" style="border-radius: 10px;"></canvas>
           </div>
         </div>
