--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="description"
         content="ULSR-GS: Ultra Large-scale Surface Reconstruction Gaussian Splatting with Multi-View Geometric Consistency">
-  <meta name="keywords" content="VastGaussian">
+  <meta name="keywords" content="ULSR GS">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>ULSR-GS: Ultra Large-scale Surface Reconstruction Gaussian Splatting with Multi-View Geometric Consistency</title>
 
